--- a/style.css
+++ b/style.css
@@ -28,5 +28,20 @@ p{
     align-items: center;
 }
 .container{
-    max-width: 80em;
+    max-width: 70em;
+}
+img{
+    width: 100%;
+    height: auto;
+}
+
+@media (max-width: 992px) {
+    .gridcontainer{
+        grid-template-columns: auto auto;
+    }
+}
+@media (max-width: 530px) {
+    .gridcontainer{
+        grid-template-columns: auto;
+    }
 }
