--- a/style.css
+++ b/style.css
@@ -1,47 +1,66 @@
-.gridcontainer{
-    display: grid;
-    grid-template-columns: auto auto auto;
+.container
+{
+    background-color: white;
+    width: 70%;
+    margin:auto;
+
 }
-.innerbox{
-    max-width: auto;
-    height: 100px;
-    background-color: gray;
+.header
+{
+/* justify-content: space-between; */
+border-bottom: 2px solid #dedede;
+}
+.header h1 small{
+    font-size: 20px;
+    color: #b0b0b0;
+  
+}
+.content
+{
+    
+   width: 100%;
+}
+.row
+{
+width: 100%;
+
 }
 .box{
-    margin: 10px;
+width: 33.33%;
+padding: 20px 0;
+float: right;
+
+
 }
-h3{
-    color: rgb(13, 103, 144);
-    text-align: left;
+.box h4
+{
+    color: blue;
+    margin: 0;
+    padding-top: 4px;
+
 }
-p{
-    color: gray;
-    text-align: left;
+.box p
+{
+    padding-top: 5px;
+    color: #b0b0b0;
+    margin: 0px;
 }
-.head{
-    color: black;
-    font-size: 25px;
-    padding-right: 20px;
-}
-.txt{
-    display: flex;
-    align-items: center;
-}
-.container{
-    max-width: 70em;
-}
-img{
-    width: 100%;
-    height: auto;
+.box img
+{
+    width: 95%;
 }
 
-@media (max-width: 992px) {
-    .gridcontainer{
-        grid-template-columns: auto auto;
-    }
+.footer
+{
+  
+    position: relative;
+    float: left;
+    bottom: 0;
+    color: #b0b0b0;
+    padding-top: 5px;
+    margin: 0px;
+    width: 100%;
+
+    border-top: 2px solid #dddddd;
 }
-@media (max-width: 530px) {
-    .gridcontainer{
-        grid-template-columns: auto;
-    }
-}
+
